Update backend with .env changes and MongoDB connection

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb://localhost:27017
+MONGO_URI=mongodb+srv://devx:theog@cluster0.jhcfodn.mongodb.net/PassMate?retryWrites=true&w=majority&appName=Cluster0
 DB_NAME=PassMate
+PORT=3000
